--- a/res/layout/about_us.xml
+++ b/res/layout/about_us.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="200dp"
-        android:text="TextView" />
+        android:text="@string/about_us" />
 
 </LinearLayout>
