--- a/res/layout/list_group.xml
+++ b/res/layout/list_group.xml
@@ -10,7 +10,10 @@
         android:id="@+id/lblListHeader"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingRight="0dp"
+        android:paddingEnd="0dp"
         android:textSize="17sp"
         android:textColor="#f9f93d" />
  
