--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -8,9 +8,12 @@
         android:id="@+id/lblListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="17dip"
+        android:textSize="17sp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" 
+        android:paddingRight="0dp"
+        android:paddingEnd="0dp"/>
  
 </LinearLayout>
